# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml  shifts.db  tasks.py  test-shifts.db  test-users.db  users.db
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/kuvat/: Untitled Diagram.drawio  luonnos.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: build.py  config.py  db_connection.py  index.py  initialize_database.py  shift_db_connection.py  users.db
src/entities/: shift.py  user.py
src/repositories/: initialize_database.py  shift_repository.py  user_database.py  user_repository.py
src/services/: shift_app_service.py
src/tests/repositories/: shift_repository_test.py  user_repository_test.py
src/tests/services/: shift_app_service_test.py
src/ui/: create_shift.py  create_user.py  employee_ui.py  employer_ui.py  login.py  login_ui.py  shift_view.py  ui.py
