[tool.poetry]
name = "\"project poetry\""
version = "0.1.0"
description = ""
authors = ["Eero Vahteri <eero.vahteri@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.1"
coverage = "^6.3.2"
pylint = "^2.13.5"
python-dotenv = "^0.20.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
